--- a/css/custom.css
+++ b/css/custom.css
@@ -122,3 +122,16 @@ p.price-desc {
 .text-shadow {
 	text-shadow: 0px 0px 3px rgba(0,0,0,0.8);
 }
+
+a.anchor {
+    display: block;
+    position: relative;
+    top: -100px;
+    visibility: hidden;
+}
+
+@media (max-width: 768px) {
+	a.anchor {
+		top: -20px;
+	}
+}
