--- a/css/colors.css
+++ b/css/colors.css
@@ -5,11 +5,11 @@
 -----------------------------------------------------------------*/
 
 
-::selection { background: #8a0206; }
+::selection { background: #333; }
 
-::-moz-selection { background: #8a0206; }
+::-moz-selection { background: #333; }
 
-::-webkit-selection { background: #8a0206; }
+::-webkit-selection { background: #333; }
 
 
 a,
